parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    NEWLINE

Grammar

Rule 0     S' -> program
Rule 1     program -> funlist
Rule 2     program -> empty
Rule 3     funlist -> funlist function
Rule 4     funlist -> function
Rule 5     function -> FUN ID ( arglist ) localslist BEGIN statementBlock END
Rule 6     function -> FUN ( arglist ) localslist BEGIN statementBlock END
Rule 7     function -> FUN ID ( arglist ) localslist BEGIN statementBlock ; END
Rule 8     arglist -> args
Rule 9     arglist -> empty
Rule 10    args -> var_decl
Rule 11    args -> args , var_decl
Rule 12    args -> args var_decl
Rule 13    localslist -> locals
Rule 14    localslist -> empty
Rule 15    locals -> locals var_decl ;
Rule 16    locals -> locals function ;
Rule 17    locals -> var_decl ;
Rule 18    locals -> function ;
Rule 19    locals -> locals var_decl
Rule 20    locals -> var_decl
Rule 21    locals -> locals function
Rule 22    locals -> function
Rule 23    var_decl -> ID : type_specifier
Rule 24    var_decl -> ID type_specifier
Rule 25    var_decl -> ID ASIGN type_specifier
Rule 26    type_specifier -> simple_type
Rule 27    type_specifier -> simple_type [ INTEGER ]
Rule 28    simple_type -> INT
Rule 29    simple_type -> FLOAT
Rule 30    statementBlock -> statementBlock ; statement
Rule 31    statementBlock -> statement
Rule 32    statementBlock -> statementBlock statement
Rule 33    statement -> WHILE relation DO statement
Rule 34    statement -> ifthen
Rule 35    statement -> ifthenelse
Rule 36    statement -> location ASIGN expression
Rule 37    statement -> inOutExpr
Rule 38    statement -> RETURN expression
Rule 39    statement -> RETURN
Rule 40    statement -> functionCall
Rule 41    statement -> SKIP
Rule 42    statement -> BREAK
Rule 43    statement -> BEGIN statementBlock END
Rule 44    statement -> BEGIN END
Rule 45    ifthen -> IF relation THEN statement
Rule 46    ifthenelse -> IF relation THEN statement ELSE statement
Rule 47    ifthenelse -> IF relation statement ELSE statement
Rule 48    functionCall -> ID ( paramslistop )
Rule 49    paramslistop -> paramList
Rule 50    paramslistop -> empty
Rule 51    paramList -> paramList , expression
Rule 52    paramList -> expression
Rule 53    inOutExpr -> PRINT ( STRING )
Rule 54    inOutExpr -> WRITE ( expression )
Rule 55    inOutExpr -> READ ( location )
Rule 56    location -> ID
Rule 57    location -> ID [ expression ]
Rule 58    relation -> relation OR relation
Rule 59    relation -> relation AND relation
Rule 60    relation -> NOT relation
Rule 61    relation -> ( relation )
Rule 62    relation -> expression LT expression
Rule 63    relation -> expression LE expression
Rule 64    relation -> expression GT expression
Rule 65    relation -> expression GE expression
Rule 66    relation -> expression NE expression
Rule 67    relation -> expression EQUAL expression
Rule 68    relation -> TRUE
Rule 69    relation -> FALSE
Rule 70    expression -> expression + expression
Rule 71    expression -> expression - expression
Rule 72    expression -> expression * expression
Rule 73    expression -> expression / expression
Rule 74    expression -> - expression
Rule 75    expression -> + expression
Rule 76    expression -> ( expression )
Rule 77    expression -> ID
Rule 78    expression -> number
Rule 79    expression -> ID [ expression ]
Rule 80    expression -> casting
Rule 81    expression -> functionCall
Rule 82    casting -> INT ( expression )
Rule 83    casting -> FLOAT ( expression )
Rule 84    number -> INTEGER
Rule 85    number -> FLOATNUM
Rule 86    empty -> <empty>

Terminals, with rules where they appear

(                    : 5 6 7 48 53 54 55 61 76 82 83
)                    : 5 6 7 48 53 54 55 61 76 82 83
*                    : 72
+                    : 70 75
,                    : 11 51
-                    : 71 74
/                    : 73
:                    : 23
;                    : 7 15 16 17 18 30
AND                  : 59
ASIGN                : 25 36
BEGIN                : 5 6 7 43 44
BREAK                : 42
DO                   : 33
ELSE                 : 46 47
END                  : 5 6 7 43 44
EQUAL                : 67
FALSE                : 69
FLOAT                : 29 83
FLOATNUM             : 85
FUN                  : 5 6 7
GE                   : 65
GT                   : 64
ID                   : 5 7 23 24 25 48 56 57 77 79
IF                   : 45 46 47
INT                  : 28 82
INTEGER              : 27 84
LE                   : 63
LT                   : 62
NE                   : 66
NEWLINE              : 
NOT                  : 60
OR                   : 58
PRINT                : 53
READ                 : 55
RETURN               : 38 39
SKIP                 : 41
STRING               : 53
THEN                 : 45 46
TRUE                 : 68
WHILE                : 33
WRITE                : 54
[                    : 27 57 79
]                    : 27 57 79
error                : 

Nonterminals, with rules where they appear

arglist              : 5 6 7
args                 : 8 11 12
casting              : 80
empty                : 2 9 14 50
expression           : 36 38 51 52 54 57 62 62 63 63 64 64 65 65 66 66 67 67 70 70 71 71 72 72 73 73 74 75 76 79 82 83
function             : 3 4 16 18 21 22
functionCall         : 40 81
funlist              : 1 3
ifthen               : 34
ifthenelse           : 35
inOutExpr            : 37
locals               : 13 15 16 19 21
localslist           : 5 6 7
location             : 36 55
number               : 78
paramList            : 49 51
paramslistop         : 48
program              : 0
relation             : 33 45 46 47 58 58 59 59 60 61
simple_type          : 26 27
statement            : 30 31 32 33 45 46 46 47 47
statementBlock       : 5 6 7 30 32 43
type_specifier       : 23 24 25
var_decl             : 10 11 12 15 17 19 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . funlist
    (2) program -> . empty
    (3) funlist -> . funlist function
    (4) funlist -> . function
    (86) empty -> .
    (5) function -> . FUN ID ( arglist ) localslist BEGIN statementBlock END
    (6) function -> . FUN ( arglist ) localslist BEGIN statementBlock END
    (7) function -> . FUN ID ( arglist ) localslist BEGIN statementBlock ; END

    $end            reduce using rule 86 (empty -> .)
    FUN             shift and go to state 4

    function                       shift and go to state 1
    funlist                        shift and go to state 2
    program                        shift and go to state 3
    empty                          shift and go to state 5

state 1

    (4) funlist -> function .

    FUN             reduce using rule 4 (funlist -> function .)
    $end            reduce using rule 4 (funlist -> function .)


state 2

    (1) program -> funlist .
    (3) funlist -> funlist . function
    (5) function -> . FUN ID ( arglist ) localslist BEGIN statementBlock END
    (6) function -> . FUN ( arglist ) localslist BEGIN statementBlock END
    (7) function -> . FUN ID ( arglist ) localslist BEGIN statementBlock ; END

    $end            reduce using rule 1 (program -> funlist .)
    FUN             shift and go to state 4

    function                       shift and go to state 6

state 3

    (0) S' -> program .



state 4

    (5) function -> FUN . ID ( arglist ) localslist BEGIN statementBlock END
    (6) function -> FUN . ( arglist ) localslist BEGIN statementBlock END
    (7) function -> FUN . ID ( arglist ) localslist BEGIN statementBlock ; END

    ID              shift and go to state 8
    (               shift and go to state 7


state 5

    (2) program -> empty .

    $end            reduce using rule 2 (program -> empty .)


state 6

    (3) funlist -> funlist function .

    FUN             reduce using rule 3 (funlist -> funlist function .)
    $end            reduce using rule 3 (funlist -> funlist function .)


state 7

    (6) function -> FUN ( . arglist ) localslist BEGIN statementBlock END
    (8) arglist -> . args
    (9) arglist -> . empty
    (10) args -> . var_decl
    (11) args -> . args , var_decl
    (12) args -> . args var_decl
    (86) empty -> .
    (23) var_decl -> . ID : type_specifier
    (24) var_decl -> . ID type_specifier
    (25) var_decl -> . ID ASIGN type_specifier

    )               reduce using rule 86 (empty -> .)
    ID              shift and go to state 12

    args                           shift and go to state 9
    var_decl                       shift and go to state 10
    arglist                        shift and go to state 11
    empty                          shift and go to state 13

state 8

    (5) function -> FUN ID . ( arglist ) localslist BEGIN statementBlock END
    (7) function -> FUN ID . ( arglist ) localslist BEGIN statementBlock ; END

    (               shift and go to state 14


state 9

    (8) arglist -> args .
    (11) args -> args . , var_decl
    (12) args -> args . var_decl
    (23) var_decl -> . ID : type_specifier
    (24) var_decl -> . ID type_specifier
    (25) var_decl -> . ID ASIGN type_specifier

    )               reduce using rule 8 (arglist -> args .)
    ,               shift and go to state 15
    ID              shift and go to state 12

    var_decl                       shift and go to state 16

state 10

    (10) args -> var_decl .

    ,               reduce using rule 10 (args -> var_decl .)
    ID              reduce using rule 10 (args -> var_decl .)
    )               reduce using rule 10 (args -> var_decl .)


state 11

    (6) function -> FUN ( arglist . ) localslist BEGIN statementBlock END

    )               shift and go to state 17


state 12

    (23) var_decl -> ID . : type_specifier
    (24) var_decl -> ID . type_specifier
    (25) var_decl -> ID . ASIGN type_specifier
    (26) type_specifier -> . simple_type
    (27) type_specifier -> . simple_type [ INTEGER ]
    (28) simple_type -> . INT
    (29) simple_type -> . FLOAT

    :               shift and go to state 23
    ASIGN           shift and go to state 22
    INT             shift and go to state 20
    FLOAT           shift and go to state 21

    type_specifier                 shift and go to state 18
    simple_type                    shift and go to state 19

state 13

    (9) arglist -> empty .

    )               reduce using rule 9 (arglist -> empty .)


state 14

    (5) function -> FUN ID ( . arglist ) localslist BEGIN statementBlock END
    (7) function -> FUN ID ( . arglist ) localslist BEGIN statementBlock ; END
    (8) arglist -> . args
    (9) arglist -> . empty
    (10) args -> . var_decl
    (11) args -> . args , var_decl
    (12) args -> . args var_decl
    (86) empty -> .
    (23) var_decl -> . ID : type_specifier
    (24) var_decl -> . ID type_specifier
    (25) var_decl -> . ID ASIGN type_specifier

    )               reduce using rule 86 (empty -> .)
    ID              shift and go to state 12

    args                           shift and go to state 9
    var_decl                       shift and go to state 10
    arglist                        shift and go to state 24
    empty                          shift and go to state 13

state 15

    (11) args -> args , . var_decl
    (23) var_decl -> . ID : type_specifier
    (24) var_decl -> . ID type_specifier
    (25) var_decl -> . ID ASIGN type_specifier

    ID              shift and go to state 12

    var_decl                       shift and go to state 25

state 16

    (12) args -> args var_decl .

    ,               reduce using rule 12 (args -> args var_decl .)
    ID              reduce using rule 12 (args -> args var_decl .)
    )               reduce using rule 12 (args -> args var_decl .)


state 17

    (6) function -> FUN ( arglist ) . localslist BEGIN statementBlock END
    (13) localslist -> . locals
    (14) localslist -> . empty
    (15) locals -> . locals var_decl ;
    (16) locals -> . locals function ;
    (17) locals -> . var_decl ;
    (18) locals -> . function ;
    (19) locals -> . locals var_decl
    (20) locals -> . var_decl
    (21) locals -> . locals function
    (22) locals -> . function
    (86) empty -> .
    (23) var_decl -> . ID : type_specifier
    (24) var_decl -> . ID type_specifier
    (25) var_decl -> . ID ASIGN type_specifier
    (5) function -> . FUN ID ( arglist ) localslist BEGIN statementBlock END
    (6) function -> . FUN ( arglist ) localslist BEGIN statementBlock END
    (7) function -> . FUN ID ( arglist ) localslist BEGIN statementBlock ; END

    BEGIN           reduce using rule 86 (empty -> .)
    ID              shift and go to state 12
    FUN             shift and go to state 4

    function                       shift and go to state 26
    localslist                     shift and go to state 27
    var_decl                       shift and go to state 28
    locals                         shift and go to state 30
    empty                          shift and go to state 29

state 18

    (24) var_decl -> ID type_specifier .

    ,               reduce using rule 24 (var_decl -> ID type_specifier .)
    ID              reduce using rule 24 (var_decl -> ID type_specifier .)
    )               reduce using rule 24 (var_decl -> ID type_specifier .)
    ;               reduce using rule 24 (var_decl -> ID type_specifier .)
    FUN             reduce using rule 24 (var_decl -> ID type_specifier .)
    BEGIN           reduce using rule 24 (var_decl -> ID type_specifier .)


state 19

    (26) type_specifier -> simple_type .
    (27) type_specifier -> simple_type . [ INTEGER ]

    ,               reduce using rule 26 (type_specifier -> simple_type .)
    ID              reduce using rule 26 (type_specifier -> simple_type .)
    )               reduce using rule 26 (type_specifier -> simple_type .)
    ;               reduce using rule 26 (type_specifier -> simple_type .)
    FUN             reduce using rule 26 (type_specifier -> simple_type .)
    BEGIN           reduce using rule 26 (type_specifier -> simple_type .)
    [               shift and go to state 31


state 20

    (28) simple_type -> INT .

    [               reduce using rule 28 (simple_type -> INT .)
    ,               reduce using rule 28 (simple_type -> INT .)
    ID              reduce using rule 28 (simple_type -> INT .)
    )               reduce using rule 28 (simple_type -> INT .)
    ;               reduce using rule 28 (simple_type -> INT .)
    FUN             reduce using rule 28 (simple_type -> INT .)
    BEGIN           reduce using rule 28 (simple_type -> INT .)


state 21

    (29) simple_type -> FLOAT .

    [               reduce using rule 29 (simple_type -> FLOAT .)
    ,               reduce using rule 29 (simple_type -> FLOAT .)
    ID              reduce using rule 29 (simple_type -> FLOAT .)
    )               reduce using rule 29 (simple_type -> FLOAT .)
    ;               reduce using rule 29 (simple_type -> FLOAT .)
    FUN             reduce using rule 29 (simple_type -> FLOAT .)
    BEGIN           reduce using rule 29 (simple_type -> FLOAT .)


state 22

    (25) var_decl -> ID ASIGN . type_specifier
    (26) type_specifier -> . simple_type
    (27) type_specifier -> . simple_type [ INTEGER ]
    (28) simple_type -> . INT
    (29) simple_type -> . FLOAT

    INT             shift and go to state 20
    FLOAT           shift and go to state 21

    type_specifier                 shift and go to state 32
    simple_type                    shift and go to state 19

state 23

    (23) var_decl -> ID : . type_specifier
    (26) type_specifier -> . simple_type
    (27) type_specifier -> . simple_type [ INTEGER ]
    (28) simple_type -> . INT
    (29) simple_type -> . FLOAT

    INT             shift and go to state 20
    FLOAT           shift and go to state 21

    type_specifier                 shift and go to state 33
    simple_type                    shift and go to state 19

state 24

    (5) function -> FUN ID ( arglist . ) localslist BEGIN statementBlock END
    (7) function -> FUN ID ( arglist . ) localslist BEGIN statementBlock ; END

    )               shift and go to state 34


state 25

    (11) args -> args , var_decl .

    ,               reduce using rule 11 (args -> args , var_decl .)
    ID              reduce using rule 11 (args -> args , var_decl .)
    )               reduce using rule 11 (args -> args , var_decl .)


state 26

    (18) locals -> function . ;
    (22) locals -> function .

    ;               shift and go to state 35
    ID              reduce using rule 22 (locals -> function .)
    FUN             reduce using rule 22 (locals -> function .)
    BEGIN           reduce using rule 22 (locals -> function .)


state 27

    (6) function -> FUN ( arglist ) localslist . BEGIN statementBlock END

    BEGIN           shift and go to state 36


state 28

    (17) locals -> var_decl . ;
    (20) locals -> var_decl .

    ;               shift and go to state 37
    ID              reduce using rule 20 (locals -> var_decl .)
    FUN             reduce using rule 20 (locals -> var_decl .)
    BEGIN           reduce using rule 20 (locals -> var_decl .)


state 29

    (14) localslist -> empty .

    BEGIN           reduce using rule 14 (localslist -> empty .)


state 30

    (13) localslist -> locals .
    (15) locals -> locals . var_decl ;
    (16) locals -> locals . function ;
    (19) locals -> locals . var_decl
    (21) locals -> locals . function
    (23) var_decl -> . ID : type_specifier
    (24) var_decl -> . ID type_specifier
    (25) var_decl -> . ID ASIGN type_specifier
    (5) function -> . FUN ID ( arglist ) localslist BEGIN statementBlock END
    (6) function -> . FUN ( arglist ) localslist BEGIN statementBlock END
    (7) function -> . FUN ID ( arglist ) localslist BEGIN statementBlock ; END

    BEGIN           reduce using rule 13 (localslist -> locals .)
    ID              shift and go to state 12
    FUN             shift and go to state 4

    function                       shift and go to state 38
    var_decl                       shift and go to state 39

state 31

    (27) type_specifier -> simple_type [ . INTEGER ]

    INTEGER         shift and go to state 40


state 32

    (25) var_decl -> ID ASIGN type_specifier .

    ,               reduce using rule 25 (var_decl -> ID ASIGN type_specifier .)
    ID              reduce using rule 25 (var_decl -> ID ASIGN type_specifier .)
    )               reduce using rule 25 (var_decl -> ID ASIGN type_specifier .)
    ;               reduce using rule 25 (var_decl -> ID ASIGN type_specifier .)
    FUN             reduce using rule 25 (var_decl -> ID ASIGN type_specifier .)
    BEGIN           reduce using rule 25 (var_decl -> ID ASIGN type_specifier .)


state 33

    (23) var_decl -> ID : type_specifier .

    ,               reduce using rule 23 (var_decl -> ID : type_specifier .)
    ID              reduce using rule 23 (var_decl -> ID : type_specifier .)
    )               reduce using rule 23 (var_decl -> ID : type_specifier .)
    ;               reduce using rule 23 (var_decl -> ID : type_specifier .)
    FUN             reduce using rule 23 (var_decl -> ID : type_specifier .)
    BEGIN           reduce using rule 23 (var_decl -> ID : type_specifier .)


state 34

    (5) function -> FUN ID ( arglist ) . localslist BEGIN statementBlock END
    (7) function -> FUN ID ( arglist ) . localslist BEGIN statementBlock ; END
    (13) localslist -> . locals
    (14) localslist -> . empty
    (15) locals -> . locals var_decl ;
    (16) locals -> . locals function ;
    (17) locals -> . var_decl ;
    (18) locals -> . function ;
    (19) locals -> . locals var_decl
    (20) locals -> . var_decl
    (21) locals -> . locals function
    (22) locals -> . function
    (86) empty -> .
    (23) var_decl -> . ID : type_specifier
    (24) var_decl -> . ID type_specifier
    (25) var_decl -> . ID ASIGN type_specifier
    (5) function -> . FUN ID ( arglist ) localslist BEGIN statementBlock END
    (6) function -> . FUN ( arglist ) localslist BEGIN statementBlock END
    (7) function -> . FUN ID ( arglist ) localslist BEGIN statementBlock ; END

    BEGIN           reduce using rule 86 (empty -> .)
    ID              shift and go to state 12
    FUN             shift and go to state 4

    function                       shift and go to state 26
    localslist                     shift and go to state 41
    var_decl                       shift and go to state 28
    locals                         shift and go to state 30
    empty                          shift and go to state 29

state 35

    (18) locals -> function ; .

    ID              reduce using rule 18 (locals -> function ; .)
    FUN             reduce using rule 18 (locals -> function ; .)
    BEGIN           reduce using rule 18 (locals -> function ; .)


state 36

    (6) function -> FUN ( arglist ) localslist BEGIN . statementBlock END
    (30) statementBlock -> . statementBlock ; statement
    (31) statementBlock -> . statement
    (32) statementBlock -> . statementBlock statement
    (33) statement -> . WHILE relation DO statement
    (34) statement -> . ifthen
    (35) statement -> . ifthenelse
    (36) statement -> . location ASIGN expression
    (37) statement -> . inOutExpr
    (38) statement -> . RETURN expression
    (39) statement -> . RETURN
    (40) statement -> . functionCall
    (41) statement -> . SKIP
    (42) statement -> . BREAK
    (43) statement -> . BEGIN statementBlock END
    (44) statement -> . BEGIN END
    (45) ifthen -> . IF relation THEN statement
    (46) ifthenelse -> . IF relation THEN statement ELSE statement
    (47) ifthenelse -> . IF relation statement ELSE statement
    (56) location -> . ID
    (57) location -> . ID [ expression ]
    (53) inOutExpr -> . PRINT ( STRING )
    (54) inOutExpr -> . WRITE ( expression )
    (55) inOutExpr -> . READ ( location )
    (48) functionCall -> . ID ( paramslistop )
